--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 1.8.12\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -1282,6 +1282,9 @@ msgid "Geometry"
 msgstr ""
 
 msgid "Full Precision"
+msgstr ""
+
+msgid "Sub Index"
 msgstr ""
 
 msgid "Extra Data"
