--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 1.8.12\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -1476,6 +1476,9 @@ msgstr "Geometrie"
 
 msgid "Full Precision"
 msgstr "Volle Präzision"
+
+msgid "Sub Index"
+msgstr "Sub Index"
 
 msgid "Extra Data"
 msgstr "Extra Daten"
