Fixed weight cache and edit live weights via pointer

--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.1\n"
+"X-Generator: Poedit 2.0.4\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -134,7 +134,7 @@ msgid "Refresh group information"
 msgstr "Gruppeninformationen werden neu geladen"
 
 msgid "Save Outfit list as group..."
-msgstr "Outfit-Liste als Gruppe speichern"
+msgstr "Outfit-Liste als Gruppe speichern..."
 
 msgid "Save the current filtered outfit list as a group"
 msgstr "Speichert die derzeit gefilterten Outfits als neue Gruppe"
@@ -209,7 +209,7 @@ msgid ""
 "filters to show the outfits you want!"
 msgstr ""
 "Wählen Sie die Sets für den Batch-Erstellungsprozess. Mithilfe der Gruppen- "
-"und Outfitfilter können Sie die Auswahl eingrenzen."
+"und Outfitfilter können Sie die Auswahl eingrenzen!"
 
 msgid "&Build"
 msgstr "&Erstellen"
@@ -505,12 +505,6 @@ msgstr ""
 "Ermöglicht es den Pinseln mit allen derzeit ausgewählten Meshes auf einmal "
 "zu kollidieren"
 
-msgid "Auto Normals"
-msgstr "Auto Normals"
-
-msgid "Recalculate normals as you edit"
-msgstr "Berechnet die Normals automatisch während der Bearbeitung neu"
-
 msgid "Recalculate Normals\tR"
 msgstr "Normals neu berechnen\tR"
 
@@ -763,7 +757,7 @@ msgstr "Slider zusammenfügen"
 msgid ""
 "Create a new shape transformation slider based on the current slider values"
 msgstr ""
-"Erstellt einen neuen Slider, der auf den aktuellen Sliderwerten basiert."
+"Erstellt einen neuen Slider, der auf den aktuellen Sliderwerten basiert"
 
 msgid "New Zap Slider"
 msgstr "Neuer Zap Slider"
@@ -771,7 +765,7 @@ msgstr "Neuer Zap Slider"
 msgid "Create a new Zap slider based on unmasked vertices"
 msgstr ""
 "Erstellt einen neuen Zap Slider, der auf allen nicht maskierten Vertices "
-"basiert."
+"basiert"
 
 msgid "Import OSD..."
 msgstr "OSD importieren..."
@@ -1637,7 +1631,7 @@ msgid "Game not found"
 msgstr "Spiel nicht gefunden"
 
 msgid "Please choose a directory to set as your Data path"
-msgstr "Bitte wählen Sie ein Verzeichnis für den Spieldaten-Pfad."
+msgstr "Bitte wählen Sie ein Verzeichnis für den Spieldaten-Pfad"
 
 msgid ""
 "WARNING: This will delete the output files from the output folder, "
