--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -2118,14 +2118,12 @@ msgid "There are no valid shapes loaded!"
 msgstr "Es sind keine gültigen Modelle geladen!"
 
 msgid ""
-"At least one vertex does not have any weighting assigned to it. This will "
-"cause issues and you should fix it using the weight brush. The affected "
-"vertices have been put under a mask. Do you want to save anyway?"
+"The following shapes have unweighted vertices, which can cause issues. The "
+"affected vertices have been put under a mask. Do you want to save anyway?"
 msgstr ""
-"Mindestens einem Vertex wurde kein Weighting zugewiesen. Dies wird Probleme "
-"verursachen und Sie sollten es mithilfe des Weight-Pinsels beheben. Die "
-"betroffenen Vertices wurden unter eine Maske versetzt. Wollen Sie trotzdem "
-"speichern?"
+"Die folgenden Modelle haben Vertices ohne Weighting, was Probleme "
+"verursachen kann. Die betroffenen Vertices wurden unter eine Maske versetzt. "
+"Trotzdem speichern?"
 
 msgid "Unweighted Vertices"
 msgstr "Vertices ohne Weighting"
