Remove file name from NifFile and its load functions

--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 2.0.5\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -2512,10 +2512,10 @@ msgid "Version"
 msgstr "Version"
 
 msgid ""
-"Version of NIF file '%s' doesn't match current target game. To use the "
-"meshes for the target game, export to OBJ/FBX and reload them again."
+"Version of NIF file doesn't match current target game. To use the meshes for "
+"the target game, export to OBJ/FBX and reload them again."
 msgstr ""
-"Version der NIF-Datei '%s' passt nicht zum aktuell verwendeten Spiel. Um die "
+"Version der NIF-Datei passt nicht zum aktuell verwendeten Spiel. Um die "
 "Modelle für das Spiel zu benutzen, müssen sie in OBJ/FBX exportiert und "
 "erneut geladen werden."
 
