--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 2.0.5\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -2156,7 +2156,7 @@ msgstr ""
 msgid "Version"
 msgstr ""
 
-msgid "Version of NIF file '%s' doesn't match current target game. To use the meshes for the target game, export to OBJ/FBX and reload them again."
+msgid "Version of NIF file doesn't match current target game. To use the meshes for the target game, export to OBJ/FBX and reload them again."
 msgstr ""
 
 msgid "Would you like Skyrim NIFs to be optimized for SSE during this session?"
