--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.5\n"
+"X-Generator: Poedit 2.0.6\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -100,6 +100,9 @@ msgid "Settings"
 msgstr ""
 
 msgid "Open Outfit Studio, a full-featured tool for creating and converting outfits."
+msgstr ""
+
+msgid "Failed to launch Outfit Studio executable!"
 msgstr ""
 
 msgid "Filter Options"
@@ -1572,9 +1575,6 @@ msgid "Choose a folder to contain the saved files"
 msgstr ""
 
 msgid "All sets processed successfully!"
-msgstr ""
-
-msgid "You can't change the settings while Outfit Studio is opened up."
 msgstr ""
 
 msgid "OpenGL Error"
