Implement button to open a project in OS #185

--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -43,6 +43,9 @@ msgstr ""
 msgid "Group Manager"
 msgstr ""
 
+msgid "Opens the current project in Outfit Studio"
+msgstr ""
+
 msgid "Single Weight"
 msgstr ""
 
