--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.7\n"
+"X-Generator: Poedit 2.0.8\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -43,6 +43,9 @@ msgstr "Öffnet den Gruppenmanager zum Bearbeiten oder Erstellen von Gruppen"
 
 msgid "Group Manager"
 msgstr "Gruppenmanager"
+
+msgid "Opens the current project in Outfit Studio"
+msgstr "Öffnet das aktuelle Projekt in Outfit Studio"
 
 msgid "Single Weight"
 msgstr "Einzelnes Gewicht"
