--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.1.1\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -987,8 +987,18 @@ msgstr "Transformieren\tF"
 
 msgid "Shows a transform tool to manipulate shapes and vertices with."
 msgstr ""
-"Zeigt an Transformierwerkzeug an, mit welchem Modelle und Vertices "
+"Zeigt ein Transformierwerkzeug an, mit welchem Modelle und Vertices "
 "manipuliert werden können."
+
+msgid "Pivot\tF"
+msgstr "Pivot\tF"
+
+msgid ""
+"Shows a pivot that can be moved and makes it the center of mesh operations "
+"like rotation and scale."
+msgstr ""
+"Zeigt einen verschiebbaren Pivot an und macht diesen das Zentrum von "
+"Modelloperationen wie das Rotieren oder Skalieren."
 
 msgid "Vertex Edit\tQ"
 msgstr "Vertex Bearbeitung\tQ"
@@ -1103,6 +1113,9 @@ msgstr ""
 
 msgid "Transform"
 msgstr "Transformieren"
+
+msgid "Pivot"
+msgstr ""
 
 msgid "Vertex Edit"
 msgstr "Vertex Bearbeitung"
