--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -642,6 +642,18 @@ msgstr "Y umkehren"
 msgid "Inverts the Y-axis of the texture coordinates."
 msgstr "Kehrt die Y-Achse der Texturkoordinaten um."
 
+msgid "Mirror"
+msgstr "Spiegeln"
+
+msgid "Mirror the selected shapes on the X-axis."
+msgstr "Spiegelt die ausgewählten Modelle auf der X-Achse."
+
+msgid "Mirror the selected shapes on the Y-axis."
+msgstr "Spiegelt die ausgewählten Modelle auf der Y-Achse."
+
+msgid "Mirror the selected shapes on the Z-axis."
+msgstr "Spiegelt die ausgewählten Modelle auf der Z-Achse."
+
 msgid "Duplicate..."
 msgstr "Duplizieren..."
 
